{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 160,
  "lineage": "052247a9-e6bc-778c-c97c-151e5938c2c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0168ecb21bbcec1c7",
            "domain": "vpc",
            "id": "eipalloc-0168ecb21bbcec1c7",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-249-163.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.249.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7d770deb69f4337",
            "domain": "vpc",
            "id": "eipalloc-0e7d770deb69f4337",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-6-209.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.6.209",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bestion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01711d925a1e4cc3a",
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:instance/i-073d1b453eafcb6ae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073d1b453eafcb6ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f760a5c6db61ec09",
            "private_dns": "ip-10-0-1-5.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-3-38-97-15.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.97.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00df6c4cd2b64abf2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02714fa4e3f9c326a",
            "tags": {
              "Name": "bestion"
            },
            "tags_all": {
              "Name": "bestion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027c630880539da07"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web-sg",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_vpc.vpc-10-0-0-0",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01711d925a1e4cc3a",
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:instance/i-0f038b37473bb7799",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f038b37473bb7799",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-011073894e57c0e3e",
            "private_dns": "ip-10-0-3-198.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068854d22d6a50c2c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba22efc58b2e5871",
            "tags": {
              "Name": "web-2a"
            },
            "tags_all": {
              "Name": "web-2a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027c630880539da07"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web-sg",
            "aws_subnet.sub-pri1-10-0-3-0",
            "aws_vpc.vpc-10-0-0-0",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01711d925a1e4cc3a",
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:instance/i-07bb3f4f2f5090af2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bb3f4f2f5090af2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a755a7575dcafd7",
            "private_dns": "ip-10-0-4-226.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ee1c788069bf2c4",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047ddd783e57091f7",
            "tags": {
              "Name": "web-2c"
            },
            "tags_all": {
              "Name": "web-2c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027c630880539da07"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web-sg",
            "aws_subnet.sub-pri2-10-0-4-0",
            "aws_vpc.vpc-10-0-0-0",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:internet-gateway/igw-0832e06a71d47871b",
            "id": "igw-0832e06a71d47871b",
            "owner_id": "263443418578",
            "tags": {
              "Name": "igw-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "igw-vpc-10-0-0-0"
            },
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/tf-alb/da519aafc621d593",
            "arn_suffix": "app/tf-alb/da519aafc621d593",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-alb-237157798.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/tf-alb/da519aafc621d593",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f7df803d878f033"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02714fa4e3f9c326a"
              },
              {
                "subnet_id": "subnet-051a4d8fb03838934"
              }
            ],
            "subnets": [
              "subnet-02714fa4e3f9c326a",
              "subnet-051a4d8fb03838934"
            ],
            "tags": {
              "Name": "tf-alb"
            },
            "tags_all": {
              "Name": "tf-alb"
            },
            "vpc_id": "vpc-02e484320d77cf301",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-ln",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:listener/app/tf-alb/da519aafc621d593/6dbc62272cdcdb06",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/alb-tg/cf6d807a98c9b0a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:listener/app/tf-alb/da519aafc621d593/6dbc62272cdcdb06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/tf-alb/da519aafc621d593",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf-alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/alb-tg/cf6d807a98c9b0a2",
            "arn_suffix": "targetgroup/alb-tg/cf6d807a98c9b0a2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/alb-tg/cf6d807a98c9b0a2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0168ecb21bbcec1c7",
            "connectivity_type": "public",
            "id": "nat-009d71c9eeb79e095",
            "network_interface_id": "eni-01f16ceeb922a71e1",
            "private_ip": "10.0.1.34",
            "public_ip": "13.209.249.163",
            "subnet_id": "subnet-02714fa4e3f9c326a",
            "tags": {
              "Name": "gw NAT-2a"
            },
            "tags_all": {
              "Name": "gw NAT-2a"
            }
          },
          "dependencies": [
            "aws_eip.nat-2a",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7d770deb69f4337",
            "connectivity_type": "public",
            "id": "nat-0ea67d16b80dbf6f2",
            "network_interface_id": "eni-0d30479335d0f2f76",
            "private_ip": "10.0.2.189",
            "public_ip": "3.34.6.209",
            "subnet_id": "subnet-051a4d8fb03838934",
            "tags": {
              "Name": "gw NAT-2c"
            },
            "tags_all": {
              "Name": "gw NAT-2c"
            }
          },
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pri1-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-0604f8989d0e30b31",
            "id": "rtb-0604f8989d0e30b31",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ea67d16b80dbf6f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pri1-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "rt-pri1-vpc-10-0-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_nat_gateway.natgw-2c",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pri2-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-01a20a27d0eef9a37",
            "id": "rtb-01a20a27d0eef9a37",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ea67d16b80dbf6f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pri2-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "rt-pri2-vpc-10-0-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_nat_gateway.natgw-2c",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pub-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-01593226861d15cfb",
            "id": "rtb-01593226861d15cfb",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0832e06a71d47871b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pub-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "rt-pub-vpc-10-0-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-vpc-10-0-0-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pri1-as1-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf0544874606aaab",
            "route_table_id": "rtb-0604f8989d0e30b31",
            "subnet_id": "subnet-0ba22efc58b2e5871"
          },
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_nat_gateway.natgw-2c",
            "aws_route_table.rt-pri1-vpc-10-0-0-0",
            "aws_subnet.sub-pri1-10-0-3-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pri2-as2-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0519a929159d9f054",
            "route_table_id": "rtb-01a20a27d0eef9a37",
            "subnet_id": "subnet-047ddd783e57091f7"
          },
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_nat_gateway.natgw-2c",
            "aws_route_table.rt-pri2-vpc-10-0-0-0",
            "aws_subnet.sub-pri2-10-0-4-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pub-as1-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04748a626122d0131",
            "route_table_id": "rtb-01593226861d15cfb",
            "subnet_id": "subnet-02714fa4e3f9c326a"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc-10-0-0-0",
            "aws_route_table.rt-pub-vpc-10-0-0-0",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pub-as2-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030045f32da3f2091",
            "route_table_id": "rtb-01593226861d15cfb",
            "subnet_id": "subnet-051a4d8fb03838934"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc-10-0-0-0",
            "aws_route_table.rt-pub-vpc-10-0-0-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:security-group/sg-09f7df803d878f033",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f7df803d878f033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALB from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "263443418578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:security-group/sg-027c630880539da07",
            "description": "Allow Web-sg inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027c630880539da07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "web from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_web-sg",
            "name_prefix": "",
            "owner_id": "263443418578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web-sg"
            },
            "tags_all": {
              "Name": "allow_web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pri1-10-0-3-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0ba22efc58b2e5871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba22efc58b2e5871",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pri1-10-0-3-0"
            },
            "tags_all": {
              "Name": "sub-pri1-10-0-3-0"
            },
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pri2-10-0-4-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-047ddd783e57091f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047ddd783e57091f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pri2-10-0-4-0"
            },
            "tags_all": {
              "Name": "sub-pri2-10-0-4-0"
            },
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pub1-10-0-1-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-02714fa4e3f9c326a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02714fa4e3f9c326a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pub1-10-0-1-0"
            },
            "tags_all": {
              "Name": "sub-pub1-10-0-1-0"
            },
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pub2-10-0-2-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-051a4d8fb03838934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051a4d8fb03838934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pub2-10-0-2-0"
            },
            "tags_all": {
              "Name": "sub-pub2-10-0-2-0"
            },
            "vpc_id": "vpc-02e484320d77cf301"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:vpc/vpc-02e484320d77cf301",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbd7332468562df4",
            "default_route_table_id": "rtb-075bcf80f570cb576",
            "default_security_group_id": "sg-0a50ce1aef8ef7eec",
            "dhcp_options_id": "dopt-ff12dc94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02e484320d77cf301",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075bcf80f570cb576",
            "owner_id": "263443418578",
            "tags": {
              "Name": "vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "vpc-10-0-0-0"
            }
          }
        }
      ]
    }
  ]
}